Sync time with server

--- a/PewsClient/PewsClient.csproj
+++ b/PewsClient/PewsClient.csproj
@@ -68,6 +68,7 @@
     <Compile Include="SettingBindingExtension.cs" />
     <Compile Include="StationDatabase.cs" />
     <Compile Include="StationInfoView.cs" />
+    <Compile Include="TimeManager.cs" />
     <Compile Include="UpdateManager.cs" />
     <Compile Include="OptionBase.cs" />
     <Compile Include="UserOption.cs" />
