Draw realtime intensity grid

--- a/PewsClient/PewsClient.csproj
+++ b/PewsClient/PewsClient.csproj
@@ -65,6 +65,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="RtGridModes.cs" />
     <Compile Include="SettingBindingExtension.cs" />
     <Compile Include="StationDatabase.cs" />
     <Compile Include="StationInfoView.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="UpdateManager.cs" />
     <Compile Include="OptionBase.cs" />
     <Compile Include="UserOption.cs" />
+    <Compile Include="Util.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
